--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Matt Jarrett</title>
-    <meta name="description" content="Self taught developer with experience in Javascript and angular, as well as Node and Express">
+    <meta name="description" content="In my personal life I have always enjoyed approaching challenges analytically, and I apply this mindset to development. I really enjoy learning new languages and frameworks, discovering the features and tools that they contain, and using them to make my skillset stronger and more versatile. I really love meeting challenges that I cannot understand and then tackling them programmatically, and learning from the process. My most recent development stack is the Angular, Express, PostgreSQL, and Node stack. I strive to constantly improve, grow my skillset and become a valuable team member, and to write consistent and readable code that will result in an efficient and well made product for the end user.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap">
     <style>:root {
@@ -223,6 +223,7 @@ blockquote > * + * {
   <body>
       <header class="masthead">
           <h1>Matt Jarrett</h1>
+          <h2>Software developer</h2>
       </header>
       <section id="contact">
         <h3>Contact</h3>
@@ -244,7 +245,7 @@ blockquote > * + * {
         <section id="about">
           <h3>About</h3>
           <article>
-            <p>Self taught developer with experience in Javascript and angular, as well as Node and Express</p>
+            <p>In my personal life I have always enjoyed approaching challenges analytically, and I apply this mindset to development. I really enjoy learning new languages and frameworks, discovering the features and tools that they contain, and using them to make my skillset stronger and more versatile. I really love meeting challenges that I cannot understand and then tackling them programmatically, and learning from the process. My most recent development stack is the Angular, Express, PostgreSQL, and Node stack. I strive to constantly improve, grow my skillset and become a valuable team member, and to write consistent and readable code that will result in an efficient and well made product for the end user.</p>
           </article>
         </section>
         <section id="profiles">
